Update VITE_BACKEND_URL to new production URLbackend deploy url

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # API Configuration
 # VITE_BACKEND_URL=http://localhost:3000
 # VITE_BACKEND_URL=https://ngo-1-edqj.onrender.com
-VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=https://ngo-backend-44od.onrender.com
 
 # Analytics Configuration (optional)
 # VITE_GA4_MEASUREMENT_ID=G-XXXXXXXXXX
